--- a/public/index.html
+++ b/public/index.html
@@ -13,19 +13,76 @@
 
     <link href="css/styles.min.css" rel="stylesheet" type="text/css">
     <!--[if lt IE 9]>
-		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-		<script src="js/libs/json2.js"></script>
-		<![endif]-->
+        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+        <script src="js/libs/json2.js"></script>
+        <![endif]-->
     <link href="css/custom/videos/styles.css" rel="stylesheet" type="text/css">
+    <style type="text/css">
+    html, body {
+        overflow-x : hidden;
+    }
+    #peek {
+        width : 400px;
+        float : right;
+        position : absolute;
+        left : -355px;
+        background-color: #99FFCC;
+        opacity: .5;
+        padding: 1em;
+        color: #003300;
+        font-family:'Avenir LT W01 65 Medium', 'AvenirLTW01-65MediumObl', 'Avenir LT W01 85 Heavy', 'AvenirLTW01-85HeavyObli', 'Avenir', 'helvetica neue', helvetica, arial, sans-serif;
+        font-weight: 300;
+        z-index: 100;
+    }
+    .lLink {
+        text-decoration: none !important;
+    }
+    </style>
 </head>
 
 <body>
+    <div id="peek" class="ui-corner-bl">
+        <div>SELECT USER TYPE</div>
+        <hr />
+        <ul>
+
+        </ul>
+    </div>
     <div id="main-content" class="container"></div>
 
     <script src="js/libs/es5-shim/es5-shim.min.js"></script>
     <script src="js/libs/respond/respond.min.js"></script>
     <script src="js/libs/requirejs/require.min.js" data-main="js/main.min.js"></script>
     <script src="js/require-config.js"></script>
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+    $('#peek').on('click', function() {
+        var $this = $(this);
+        if ($this.hasClass('open')) {
+            $this.animate({
+                left: '0px'
+            }, 500).removeClass('open');
+        } else {
+            $this.animate({
+                left: '-355px'
+            }, 500).addClass('open');
+        }
+    });
+    $.ajax({
+        url: "http://localhost:8888/roles.json",
+        type: "GET",
+        dataType: "json",
+        success: function(data) {
+            var winloc = window.location.href.split('?')[0];
+            for (var obj in data) {
+                var role = data[obj];
+                $('#peek ul').append("<div><a class='lLink' href='" + winloc + "?role=" + role + "'>" + role + "</a></div>")
+            }
+        },
+        error: function(err) {}
+    });
+    </script>
 </body>
 
 </html>
