TDD for multiple filtering of contents

--- a/test/public/index.html
+++ b/test/public/index.html
@@ -17,5 +17,6 @@
 		} );
 	</script>
 	<script src="../../public/js/libs/requirejs/require.js" data-main="SpecRunner"></script>
+	<script src="../../public/js/libs/underscore/underscore-min.js"></script>
 </body>
 </html>
