--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
     } catch (err) {}
 
     $.ajax({
-        url: "http://zubu.cloudapp.net:8888/roles.json",
+        url: "http://zubu.cloudapp.net:8888/roles.json?ts=" + (new Date().getTime()),
         type: "GET",
         dataType: "json",
         success: function(data) {
