--- a/public/index.html
+++ b/public/index.html
@@ -37,17 +37,22 @@
     .lLink {
         text-decoration: none !important;
     }
-    #videos ul li.vid-thumb:nth-child(4) {
-        margin-right: 0px;
-    }
     </style>
 </head>
 
 <body>
     <div id="peek" class="ui-corner-bl">
-        <div>SELECT USER TYPE</div>
+        <div style="font-weight: bold;">SELECT USER TYPE
+            <button onclick="refreshRec()">refresh</button>
+        </div>
         <hr />
-        <ul>
+        <div style="font-weight: bold;">SUBJECTS</div>
+        <ul id="sublist">
+
+        </ul>
+        <hr />
+        <div style="font-weight: bold;">GRADE LEVELS</div>
+        <ul id="gradlist">
 
         </ul>
     </div>
@@ -60,7 +65,7 @@
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
-    $('#peek').on('click', function() {
+    $('#peek').on('dblclick', function() {
         var $this = $(this);
         if ($this.hasClass('open')) {
             $this.animate({
@@ -78,31 +83,65 @@
         isInIframe = window.self !== window.top;
     } catch (err) {}
 
+    // $.ajax({
+    //     url: "http://zubu.cloudapp.net:8888/roles.json?ts=" + (new Date().getTime()),
+    //     type: "GET",
+    //     dataType: "json",
+    //     success: function(data) {
+    //         for (var obj in data) {
+    //             var role = data[obj];
+    //             if (isInIframe) {
+    //                 $('#peek ul').append("<div><a class=\"lLink\" href=\"#\" onclick=\"$(parent.document).find('iframe').attr('src', '/resources/5048e5d0e5e7fb620900005d/public/index.html?role=" + role + "')\"; return false;'>" + decodeURI(role) + "</a></div>")
+    //             } else {
+    //                 var winloc = window.location.href.split('?')[0];
+    //                 $('#peek ul').append("<div><a class='lLink' href='" + winloc + "?role=" + role + "'>" + decodeURI(role) + "</a></div>")
+    //             }
+    //         }
+    //     },
+    //     error: function(err) {}
+    // });
     $.ajax({
-        url: "http://zubu.cloudapp.net:8888/roles.json?ts=" + (new Date().getTime()),
+        url: "http://zubu.cloudapp.net:8888/subjects.json?ts=" + (new Date().getTime()),
         type: "GET",
         dataType: "json",
         success: function(data) {
-            for (var obj in data) {
-                var role = data[obj];
-                if (isInIframe) {
-                    var parentWindow = window.parent.document;
-
-                    $('#main-content.container', parentWindow).removeClass('container').addClass('container-fluid');
-                    $('#resource-content', parentWindow).css('width', '100%');
-                    $('#main-content.container').css('width', '100%');
-                    $('.wide-container.resources').css('width', '100%');
-                    $('.wide-container.resources').css('width', '100%');
-
-                    $('#peek ul').append("<div><a class=\"lLink\" href=\"#\" onclick=\"$(parent.document).find('iframe').attr('src', '/resources/5048e5d0e5e7fb620900005d/public/index.html?role=" + role + "')\"; return false;'>" + decodeURI(role) + "</a></div>")
-                } else {
-                    var winloc = window.location.href.split('?')[0];
-                    $('#peek ul').append("<div><a class='lLink' href='" + winloc + "?role=" + role + "'>" + decodeURI(role) + "</a></div>")
+            if (data) {
+                for (var objIndex in data.subjects) {
+                    $("#sublist").append(
+                        $("<li />").addClass("lLink").append($("<input />").attr("type", "checkbox").attr("name", "sub").attr("value", objIndex)).append(data.subjects[objIndex])
+                    );
+                }
+                for (var objIndex in data.grades) {
+                    $("#gradlist").append(
+                        $("<li />").addClass("lLink").append($("<input />").attr("type", "checkbox").attr("name", "gra").attr("value", objIndex)).append(data.grades[objIndex])
+                    );
                 }
             }
         },
         error: function(err) {}
     });
+
+    function refreshRec() {
+        var sub = [];
+        var gra = [];
+        var obj = $("input").serializeArray();
+        if (obj) {
+            for (var objIndex in obj) {
+                if (obj[objIndex].name == "sub") {
+                    sub.push(obj[objIndex].value);
+                } else {
+                    gra.push(obj[objIndex].value);
+                }
+            }
+        }
+        var param = '?sub=[' + sub + ']&gra=[' + gra + ']';
+        if (isInIframe) {
+            $(parent.document).find('iframe').attr('src', '/resources/5048e5d0e5e7fb620900005d/public/index.html' + param)
+        } else {
+            var winloc = window.location.href.split('?')[0];
+            window.location.href = winloc + param;
+        }
+    }
     </script>
 </body>
 
