included hq missing images

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
         position : absolute;
         left : -355px;
         background-color: #99FFCC;
-        opacity: .5;
+        opacity: .75;
         padding: 1em;
         color: #003300;
         font-family:'Avenir LT W01 65 Medium', 'AvenirLTW01-65MediumObl', 'Avenir LT W01 85 Heavy', 'AvenirLTW01-85HeavyObli', 'Avenir', 'helvetica neue', helvetica, arial, sans-serif;
@@ -41,7 +41,7 @@
 </head>
 
 <body>
-    <div id="peek" class="ui-corner-bl">
+    <div id="peek" class="ui-corner-bl" style="-webkit-user-select: none; -moz-user-select: none; -khtml-user-select: none; -ms-user-select: none;">
         <div style="font-weight: bold;">SELECT USER TYPE
             <button onclick="refreshRec()">refresh</button>
         </div>
