--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,9 @@
     .lLink {
         text-decoration: none !important;
     }
+    #videos ul li.vid-thumb:nth-child(4) {
+        margin-right: 0px;
+    }
     </style>
 </head>
 
@@ -80,6 +83,14 @@
 
     var isInIframe = true;
     try {
+        var parentWindow = window.parent.document;
+
+        $('#main-content.container', parentWindow).removeClass('container').addClass('container-fluid');
+        $('#resource-content', parentWindow).css('width', '100%');
+        $('#main-content.container').css('width', '100%');
+        $('.wide-container.resources').css('width', '100%');
+        $('.wide-container.resources').css('width', '100%');
+
         isInIframe = window.self !== window.top;
     } catch (err) {}
 
