--- a/public/index.html
+++ b/public/index.html
@@ -37,9 +37,6 @@
     .lLink {
         text-decoration: none !important;
     }
-    #videos ul li.vid-thumb:nth-child(4) {
-        margin-right: 0px;
-    }
     </style>
 </head>
 
@@ -59,7 +56,7 @@
 
         </ul>
     </div>
-    <div id="main-content" class="container"></div>
+    <div id="main-content" class="container-fluid"></div>
 
     <script src="js/libs/es5-shim/es5-shim.min.js"></script>
     <script src="js/libs/respond/respond.min.js"></script>
@@ -85,11 +82,12 @@
     try {
         var parentWindow = window.parent.document;
 
-        $('#main-content.container', parentWindow).removeClass('container').addClass('container-fluid');
-        $('#resource-content', parentWindow).css('width', '100%');
-        $('#main-content.container').css('width', '100%');
-        $('.wide-container.resources').css('width', '100%');
-        $('.wide-container.resources').css('width', '100%');
+	$(window.document).ready(function() {
+	    $('#main-content.container', parentWindow).removeClass('container').addClass('container-fluid');
+	    $('#resource-content', parentWindow).removeClass('container').removeClass('span12').addClass('container-fluid');
+	    $('iframe#resource-app', parentWindow).addClass('container-fluid');
+	    $('#main-content.container').removeClass('container').addClass('container-fluid');
+	});
 
         isInIframe = window.self !== window.top;
     } catch (err) {}
