--- a/public/index.html
+++ b/public/index.html
@@ -22,21 +22,22 @@
 </head>
 
 <body>
-    <div id="peek" class="ui-corner-bl" style="-webkit-user-select: none; -moz-user-select: none; -khtml-user-select: none; -ms-user-select: none;">
+    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+    <!-- UNCOMMENT FOR DEMO/TESTING NEEDS -->
+    <!-- <div id="peek" class="ui-corner-bl" style="-webkit-user-select: none; -moz-user-select: none; -khtml-user-select: none; -ms-user-select: none;">
         <div style="font-weight: bold;">SELECT USER TYPE
-            <button onclick="refreshRec()">LOGIN</button>
+            <button id="reLogin">LOGIN</button>
         </div>
         <hr />
         <div style="font-weight: bold;">SUBJECTS</div>
         <ul id="sublist">
-
         </ul>
         <hr />
         <div style="font-weight: bold;">GRADE LEVELS</div>
         <ul id="gradlist">
-
         </ul>
-    </div>
+    </div> -->
+    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <div id="main-content" class="container-fluid"></div>
 
     <script src="js/libs/es5-shim/es5-shim.min.js"></script>
@@ -45,32 +46,12 @@
     <script src="js/require-config.js"></script>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+    <!-- UNCOMMENT FOR DEMO/TESTING NEEDS -->
+    <!-- <script src="js/utilities/videos/demo.js"></script> -->
+    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <script type="text/javascript">
-    $('#peek').on('mouseenter', function() {
-        var $this = $(this);
-        //if ($this.hasClass('open')) {
-            $this.animate({
-                left: '0px'
-            }, 500).removeClass('open');
-        // } else {
-        //     $this.animate({
-        //         left: '-205px'
-        //     }, 500).addClass('open');
-        // }
-    });
-    $('#peek').on('mouseleave', function() {
-        var $this = $(this);
-        // if ($this.hasClass('open')) {
-        //     $this.animate({
-        //         left: '0px'
-        //     }, 500).removeClass('open');
-        // } else {
-            $this.animate({
-                left: '-205px'
-            }, 500).addClass('open');
-        //}
-    });
-
+    //THIS IS ONLY TO GET BY WITH THE IFRAME ISSUES OF THE PLATFORM, HOPEFULLY WE COULD REMOVE THIS SOON!
     var isInIframe = true;
     try {
         var parentWindow = window.parent.document;
@@ -84,103 +65,6 @@
 
         isInIframe = window.self !== window.top;
     } catch (err) {}
-
-    // $.ajax({
-    //     url: "http://zubu.cloudapp.net:8888/roles.json?ts=" + (new Date().getTime()),
-    //     type: "GET",
-    //     dataType: "json",
-    //     success: function(data) {
-    //         for (var obj in data) {
-    //             var role = data[obj];
-    //             if (isInIframe) {
-    //                 $('#peek ul').append("<div><a class=\"lLink\" href=\"#\" onclick=\"$(parent.document).find('iframe').attr('src', '/resources/5048e5d0e5e7fb620900005d/public/index.html?role=" + role + "')\"; return false;'>" + decodeURI(role) + "</a></div>")
-    //             } else {
-    //                 var winloc = window.location.href.split('?')[0];
-    //                 $('#peek ul').append("<div><a class='lLink' href='" + winloc + "?role=" + role + "'>" + decodeURI(role) + "</a></div>")
-    //             }
-    //         }
-    //     },
-    //     error: function(err) {}
-    // });
-
-    function getURLParameter(name) {
-        return decodeURIComponent((new RegExp('[?|&]' + name + '=' + '([^&;]+?)(&|#|;|$)').exec(location.search) || [, ''])[1].replace(/\+/g, '%20')) || null;
-    }
-
-    var demoObj = {
-        'subject': [],
-        'gradelevel': []
-    };
-
-    $.ajax({
-        url: "http://zubu.cloudapp.net:8888/subjects.json?ts=" + (new Date().getTime()),
-        type: "GET",
-        dataType: "json",
-        success: function(data) {
-
-            var subRaw = getURLParameter('sub');
-            var graRaw = getURLParameter('gra');
-            var sub = [];
-            var gra = [];
-
-            //for demo only eval() will be removed
-            if (subRaw) {
-                eval("sub = " + subRaw + ";");
-            }
-            if (graRaw) {
-                eval("gra = " + graRaw + ";");
-            }
-
-            if (data) {
-                for (var objIndex in data.subjects) {
-                    var input = $("<input />").attr("type", "checkbox").attr("name", "sub").attr("value", objIndex);
-
-
-                    if (sub.indexOf(parseInt(objIndex, 10)) > -1) {
-                        input.attr("checked", "checked");
-                    }
-
-                    $("#sublist").append(
-                        $("<li />").addClass("lLink").append(input).append(data.subjects[objIndex])
-                    );
-                }
-                for (var objIndex in data.grades) {
-                    var input = $("<input />").attr("type", "checkbox").attr("name", "gra").attr("value", objIndex);
-
-                    if (gra.indexOf(parseInt(objIndex, 10)) > -1) {
-                        input.attr("checked", "checked");
-                    }
-
-                    $("#gradlist").append(
-                        $("<li />").addClass("lLink").append(input).append(data.grades[objIndex])
-                    );
-                }
-            }
-        },
-        error: function(err) {}
-    });
-
-    function refreshRec() {
-        var sub = [];
-        var gra = [];
-        var obj = $("input").serializeArray();
-        if (obj) {
-            for (var objIndex in obj) {
-                if (obj[objIndex].name == "sub") {
-                    sub.push(obj[objIndex].value);
-                } else {
-                    gra.push(obj[objIndex].value);
-                }
-            }
-        }
-        var param = '?sub=[' + sub + ']&gra=[' + gra + ']';
-        if (isInIframe) {
-            $(parent.document).find('iframe').attr('src', '/resources/5048e5d0e5e7fb620900005d/public/index.html' + param)
-        } else {
-            var winloc = window.location.href.split('?')[0];
-            window.location.href = winloc + param;
-        }
-    }
     </script>
 </body>
 
